--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,6 +1,6 @@
 {
     "home": {
-        "appName": "Quiz Application",
+        "title": "Internationalization",
         "appStartBtn": "user panel"
     },
     "user": {
