--- a/public/locales/fa.json
+++ b/public/locales/fa.json
@@ -1,6 +1,6 @@
 {
     "home": {
-        "appName": "اپلیکیشن کوئیز",
+        "title": "بین المللی سازی",
         "appStartBtn": "پنل کاربری"
     },
     "user": {
